[project]
name = "ImageTileProcessor"
version = "0.2.1"
description = "An in-house package for lazy tiled image loading to save RAM and various methods to post-process tiled outputs"
authors = [
    { name = "Tong Li", email = "tl10@sanger.ac.uk" },
]
license = { text = "MIT" }
readme = "README.md"
keywords = ["image", "tiles", "processing"]
requires-python = ">=3.10"
dependencies = [
    "numpy>=1.24.0",
    "fire>=0.6.0",
    "aicsimageio[all]>=4.12.1",
    "shapely>=2.0.3",
    "pandas>=2.0.0",
    "tifffile>=2022.4.8",
    "click>=8.0.0",
    "tqdm>=4.67.1",
    "bioformats-jar>=2020.5.27",
]

[project.urls]
Homepage = "https://github.com/BioinfoTongLI/ImageTileProcessor"
Repository = "https://github.com/BioinfoTongLI/ImageTileProcessor"

[project.scripts]
merge-peaks = "imagetileprocessor.merge_peaks:run"
merge-polygons = "imagetileprocessor.merge_polygons:run"
tile-2d-image = "imagetileprocessor.tile_2D_image:run"

[dependency-groups]
dev = [
    "pytest>=6.2.4",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
